--- a/8_SDK/index.html
+++ b/8_SDK/index.html
@@ -21,7 +21,7 @@
 		<li class="friends-group-item">
 			<img class="photo-section" src="{{photo_100}}">
 			<div class="name-section" >{{first_name}} {{last_name}}</div>
-			<div class="age-section">{{age}}</div>
+			<div class="age-section">{{year}}</div>
 			<div class="bday-section">{{bdate}}</div>
 		</li>
 	{{/each}}
