--- a/bom.html
+++ b/bom.html
@@ -8,6 +8,8 @@
 	
 
 	<script>
+	document.cookie = 'city=spb';
+	document.cookie = 'land=island';
 		let tab = document.createElement('table');
 		let tr = document.createElement('tr');
 		let td = document.createElement('td');
