--- a/6_Async/1_task/index.html
+++ b/6_Async/1_task/index.html
@@ -3,21 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Async</title>
+    <title>Async Task 1</title>
 </head>
 
 <body>
-    <script>
-    function timer(time) {
-        return new Promise((res, req) => {
-            setTimeout(res, time)
-        })
-    };
-
-    timer(4000).then(() => {
-        console.log("функция вывелась через 4 секунды");
-    });
-    </script>
+    <h1>Результат в консоли</h1>
+    <script src="main.js"></script>
 </body>
 
 </html>
