--- a/7_BOM/2_task/bom2.html
+++ b/7_BOM/2_task/bom2.html
@@ -20,7 +20,7 @@
                 </tr>
             </table>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 add__cookie">
             <h1 class="form__heading">Добавить cookie</h1>
             <form action="#" class="cookie__form" id="addForm">
                 <input type="text" class="form__input" id='setCookieName' placeholder="Имя">
