--- a/8_SDK/2_task/index.html
+++ b/8_SDK/2_task/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
     <script src="http://vk.com/js/api/openapi.js" type="text/javascript"></script>
-    <title>SDK</title>
+    <title>SDK Task 2 VK API</title>
 </head>
 
 <body>
